--- a/src/app/showtask/showtask.component.html
+++ b/src/app/showtask/showtask.component.html
@@ -1,27 +1,31 @@
-<div class="conatiner">
-    <div class="row">
-        <div class="col-xl-4" >
-        <div class="listdraggable list-group"><p>Open</p>
-            <span class="list-group-item"  *ngFor="let ans of result" (onDrag)="onItemDrag($event)" draggable  [dragData]="ans.title" [attr.for]="ans.title+'#'+ans.description+'#'+ans.status+'#'+ans.datetime+'#'+ans.id">{{ans.title}}&nbsp;
-            &nbsp;  <a href="/Edit/{{ans.id}}" >Edit</a>
-            </span> 
-        </div>
+<div class="container">
+  <div class="row">
+    <div class="col-xl-4" >
+      <div class="listdraggable list-group"><h4>Open</h4>
+        <span class="list-group-item"  *ngFor="let ans of result" (onDrag)="onItemDrag($event)" draggable  [dragData]="ans" [attr.for]="ans.title+'#'+ans.description+'#'+ans.status+'#'+ans.datetime+'#'+ans.id">{{ans.title}}
+        &nbsp;  <a href="/Edit/{{ans.id}}"></a>
+        </span>
+    </div>
      </div>
-      <div class="col-xl-4">    
+    <div class="col-xl-4">    
       <div class ="listdroppable list-group" (onDrop)="onItemDrop($event)" droppable>
         <p>In-Progress</p> 
-        <li class="list-group-item" *ngFor="let ans of progress" >{{ans}}</li>
+        <li class="list-group-item" *ngFor="let ans of progress" >{{ans.title}}</li>
       </div>    
-    </div>
+      </div>
     <div class="col-xl-4">    
-        <div class ="listdroppable list-group" (onDrop)="onItemDropComplete($event)" droppable>
+        <div class ="listdroppable list-group" (onDrop)="onItemDropComplete($event)" droppable="true">
           <p>Completed</p>  
-          <li class="list-group-item" *ngFor="let ans of complete" >{{ans}}</li>
+          <li class="list-group-item" *ngFor="let ans of complete" >{{ans.title}}</li>
         </div>    
       </div>
-    </div>
+  </div>
 </div>
 
+  
+
+
+  
   
 
 
